5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1863_3211.log
== TEST (2019-07-02 11:10:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))
print(round("corrida: ",M[4], 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:12:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))
print(round("corrida: ",M[4], 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:13:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: " M[0], 0))
print(round("corrida: " M[1], 0))
print(round("bicicleta: " M[2], 0))
print(round("natacao: " M[3], 0))
print(round("corrida: " M[4], 0))
-- ERROR:
File "XXXX", line 14
    print(round("caminhada: " M[0], 0))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:13:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))
print(round("corrida: ",M[4], 0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:14:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:15:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0]), 0)
print(round("corrida: ",M[1]), 0)
print(round("bicicleta: ",M[2]), 0)
print(round("natacao: ",M[3]), 0)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:16:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",M[0])
print("corrida: ",M[1])
print("bicicleta: ",M[2])
print("natacao: ",M[3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:17:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 2))
print(round("corrida: ",M[1], 2))
print(round("bicicleta: ",M[2], 2))
print(round("natacao: ",M[3], 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:18:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 3))
print(round("corrida: ",M[1], 3))
print(round("bicicleta: ",M[2], 3))
print(round("natacao: ",M[3], 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print(round("caminhada: ",M[0], 0))
print(round("corrida: ",M[1], 0))
print(round("bicicleta: ",M[2], 0))
print(round("natacao: ",M[3], 0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:26:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(M):
	if i[0] == max(M):
		print("caminhada")
	elif i[1] == max[M]:
		print("corrida")
	elif i[2] == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:30:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(M):
	if i == max(M):
		print("caminhada")
	elif i == max[M]:
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(shape(M)[0]):
	if i == max(M):
		print("caminhada")
	elif i == max[M]:
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(shape(M)[0]):
	if i == max(M):
		print("caminhada")
	elif i == max(M):
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(shape(M)[0]):
	if i == max(M):
		print("caminhada")
	elif i == max(M):
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	elif i == max(M)
		print("natacao")


-- ERROR:
File "XXXX", line 26
    elif i == max(M)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:34:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(shape(M)[0]):
	if i == max(M):
		print("caminhada")
	elif i == max(M):
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	elif i == max(M):
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:35:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(shape(M)[1]):
	if i == max(M):
		print("caminhada")
	elif i == max(M):
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))

for i in range(M):
	if i == max(M):
		print("caminhada")
	elif i == max(M):
		print("corrida")
	elif i == max(M):
		print("bicicleta")
	else:
		print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:37:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
V = V.T

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))


if M[0] == max(M):
	print("caminhada")
elif M[1] == max(M):
	print("corrida")
elif M[2] == max(M):
	print("bicicleta")
else:
	print("natacao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:38:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

H = array([[1,2,0.5,1.5],
			 [1.5,1,0.5,1],
			 [1,1,1,2.5],
			 [2.5,0.5,2,0.5]])

V = array(eval(input("Digite o vetor: ")))
241

M = dot(inv(H),V.T)

print("caminhada: ",round(M[0], 0))
print("corrida: ",round(M[1], 0))
print("bicicleta: ",round(M[2], 0))
print("natacao: ",round(M[3], 0))


if M[0] == max(M):
	print("caminhada")
elif M[1] == max(M):
	print("corrida")
elif M[2] == max(M):
	print("bicicleta")
else:
	print("natacao")


-- EXECUTION TIME:
0.873291
-- TEST CASE 1:
---- input:
[6407.0,4872.0,10619.0,8319.5]
---- correct output:
caminhada: 164.0
corrida: 207.0
bicicleta: 3198.0
natacao: 2820.0
bicicleta
---- user output:
caminhada:  164.0
corrida:  207.0
bicicleta:  3198.0
natacao:  2820.0
bicicleta
-- TEST CASE 2:
---- input:
[6248.0,7068.0,8351.0,13344.5]
---- correct output:
caminhada: 3050.0
corrida: 195.0
bicicleta: 2556.0
natacao: 1020.0
caminhada
---- user output:
caminhada:  3050.0
corrida:  195.0
bicicleta:  2556.0
natacao:  1020.0
caminhada
-- TEST CASE 3:
---- input:
[9902.0,6825.5,15785.0,5539.0]
---- correct output:
caminhada: 195.0
corrida: 325.0
bicicleta: 1020.0
natacao: 5698.0
natacao
---- user output:
caminhada:  195.0
corrida:  325.0
bicicleta:  1020.0
natacao:  5698.0
natacao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
